// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiTabs props expand is rendered 1`] = `
<div
  class="euiTabs euiTabs--medium euiTabs--expand euiTabs--bottomBorder emotion-euiTabs-m-bottomBorder"
  role="tablist"
/>
`;

exports[`EuiTabs props size l is rendered 1`] = `
<div
  class="euiTabs euiTabs--large euiTabs--bottomBorder emotion-euiTabs-l-bottomBorder"
  role="tablist"
/>
`;

exports[`EuiTabs props size m is rendered 1`] = `
<div
  class="euiTabs euiTabs--medium euiTabs--bottomBorder emotion-euiTabs-m-bottomBorder"
  role="tablist"
/>
`;

exports[`EuiTabs props size s is rendered 1`] = `
<div
  class="euiTabs euiTabs--small euiTabs--bottomBorder emotion-euiTabs-s-bottomBorder"
  role="tablist"
/>
`;

exports[`EuiTabs props size xl is rendered 1`] = `
<div
  class="euiTabs euiTabs--xlarge euiTabs--bottomBorder emotion-euiTabs-xl-bottomBorder"
  role="tablist"
/>
`;

exports[`EuiTabs renders 1`] = `
<div
  aria-label="aria-label"
  class="euiTabs euiTabs--medium euiTabs--bottomBorder testClass1 testClass2 emotion-euiTabs-m-bottomBorder"
  data-test-subj="test subject string"
  role="tablist"
/>
`;
